--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.products-card-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;  
+  align-items: flex-start;
+  justify-content: space-between;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.product-card {
+  box-sizing: border-box;
+  width: 30%;
+
+  padding: 1%;
+  margin-bottom: 2%;
+
+  text-align: center;
+  background-color: lightgray;
+  border-radius: 10px;
+}
+
+.product-card .card-img {
+  width: 100%;
+  object-fit: contain;
+}
+
+.card-price-info {
+  display: flex;
+  flex-wrap: wrap;  
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+.card-price {
+  color: red;
+}
+
+.add-to-cart {
+  padding: 2px;
+  background-color: lightcoral;
+  border: 1px solid lightcoral;
+  border-radius: 5px;
+  text-transform: uppercase;
   color: white;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.products-list-container {
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.product-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  box-sizing: border-box;
+
+  padding: 1%;
+  margin-bottom: 5px;
+
+  text-align: center;
+  background-color: lightgray;
+}
+
+.product-list .card-img {
+  width: 10%;
+  object-fit: contain;
+}
+
+.product-list h1 {
+  width: 25%;
 }
